# cpplibxml2

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: CompilerWarnings.cmake
include/: cpplibxml2.hpp  errorTypes.hpp
lib/: CMakelists.txt
lib/googletest/: CMakeLists.txt  CMakelists.txt
lib/libxml2/: CMakeLists.txt  CMakelists.txt
src/: cpplibxml2.cpp  helper.hpp  main.cpp
test/: CMakeLists.txt  CMakelists.txt  DocClassTest.cpp  ErrorTypesTest.cpp  NodeClassTest.cpp  NodeNamespaceTest.cpp  ParserOptionsTest.cpp  helper.hpp  test.cpp
test/testData/: empty.xml  nsExample.xml
